...

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarTasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/Toolbar" />
...
            android:layout_height="match_parent"
            android:onRefresh="@{viewmodel}"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:refreshing="@{viewmodel.dataLoading}">

            <RelativeLayout
                android:id="@+id/tasksContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:orientation="vertical">

                <LinearLayout
...
